# g3logPython

./: .travis.yml  CMakeLists.txt  README.md  setup.py
Examples/: 00_simple.py  01_journald.py  02_logrotate.py  03_Three_Sinks.py  04_simple  04_simple_build.sh  04_simple_pure_CPP.cpp  06_sink_by_name.py  07_ColorTerm.py  08_build.sh  08_file_descriptor_iface.cpp  Two_Sinks.py
Examples/05_py+cpp/: 05_main.py  setup.py
Examples/05_py+cpp/cppLib/: lib.cpp
Examples/09_interoperability/: 09_main.py  build_09.sh  build_panda3d.sh  install_panda3d.sh  readme.md  setup.py
Examples/09_interoperability/cppP3Dcalls/: lib.cpp
Tests/: EXCEPT_journal_Sink_type_twice.py  EXCEPT_same_name_Error.py  Fatal.py  WARNING_bad_level.py  _bad_level.py  journald_sink_check_journalctl.py  logrotate_two_directories.py  same_Sink_type_twice.py  same_name_Error.py  so_lib_loaded.py  valgrind_journald.py  valgrind_journald.sh  valgring_same_Sink_type_twice.sh
doc/: links.md  technical.md
g3logBindings/: ColorTermSink.cpp  ColorTermSink.h  fd_listener.cpp  g3logBindings.h  intern_log.h  log.cpp  sinks.cpp  worker.cpp
g3logPython/: .g3logPython.cpp.kate-swp  ColorTermSink.cpp  __init__.py  g3logPython.cpp  g3logPython.h  intern_log.h  log.cpp  sinks.cpp  store.cpp  worker.cpp
scripts/: BuildAndRunTests.sh  Build_Only.sh  Build_n_Install_Only.sh  coverage.sh  install-dependencies.sh
